Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.0.4
-
None
Description
Row-based replication from MySQL 5.6 (tried 5.6.10 and the current tree) to MariaDB 10.0 breaks immediately with
Last_Errno: 1594
|
Last_Error: Relay log read failure: Could not parse relay log event entry. The possible reasons are: the master's binary log is corrupted (you can check this by running 'mysqlbinlog' on the binary log), the slave's relay log is corrupted (you can check this by running 'mysqlbinlog' on the relay log), a network problem, or a bug in the master's or slave's MySQL code. If you want to check the master's binary log or slave's relay log, you will be able to know their names by issuing 'SHOW SLAVE STATUS' on this slave.
|
It happens even if GTID is not enabled on MySQL master.
SBR seems to work.
SET binlog_format=ROW; |
CREATE TABLE t1 (i INT); |
INSERT INTO t1 VALUES (1); |
Attachments
Issue Links
- causes
-
MDEV-39485 Heap-buffer-overflow in mariadb-binlog upon read in Rows_log_event constructor in sql/log_event.cc
-
- Closed
-
- relates to
-
MDEV-5705 replication testing: 5.6->10.0
-
- Stalled
-
- links to