MDEV-5115 RBR from MySQL 5.6 to MariaDB 10.0 does not work

Patially merge WL#5917, to understand v2 row events