client/mysqlbinlog.cc
@@ -1228,6 +1228,9 @@ Exit_status process_event(PRINT_EVENT_INFO *print_event_info, Log_event *ev,
     case WRITE_ROWS_EVENT:
     case DELETE_ROWS_EVENT:
     case UPDATE_ROWS_EVENT:
+    case WRITE_ROWS_EVENT_V1:
+    case UPDATE_ROWS_EVENT_V1:
+    case DELETE_ROWS_EVENT_V1:
     {
       Rows_log_event *e= (Rows_log_event*) ev;
       if (print_row_event(print_event_info, ev, e->get_table_id(),
