mysql-test/mysql-test-run.pl
@@ -4824,6 +4824,7 @@ sub extract_warning_lines ($$) {
      qr|feedback plugin: failed to retrieve the MAC address|,
      qr|Plugin 'FEEDBACK' init function returned error|,
      qr|Plugin 'FEEDBACK' registration as a INFORMATION SCHEMA failed|,
+     qr|'log-bin-use-v1-row-events' is MySQL 5.6 compatible option|,
     );
 
   my $matched_lines= [];
